# friendly-funicular

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.rst  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  supervisord.conf
blackshakara/: manage.py
blackshakara/accounts/: admin.py  apps.py  signals.py  urls.py
blackshakara/accounts/management/commands/: wait_for_db.py
blackshakara/accounts/managers/: users.py
blackshakara/accounts/models/: __init__.py  users.py
blackshakara/accounts/serializers/: authentication.py  users.py
blackshakara/accounts/views/: authentication.py
blackshakara/core/utils/: collections.py  misc.py  settings.py  settings_collections.py
blackshakara/general/: apps.py  constants.py  custom_authentication.py  permissions.py  serializers.py  tasks.py
blackshakara/general/models/: __init__.py  model_creation.py
blackshakara/general/utils/: __init__.py  custom_pagination.py  token_generator.py
blackshakara/messaging/: custom_email.py
blackshakara/project/: asgi.py  celery.py  urls.py  wsgi.py
blackshakara/project/settings/: __init__.py  base.py  environment_variables.py  logging.py  restframework.py  third_party_setup.py
blackshakara/project/settings/templates/: settings.dev.py
scripts/: entrypoint.sh
