[tool.poetry]
name = "blackshakara"
version = "0.1.0"
description = "Ecommerce Application"
authors = ["Caleb Pedro <click2bundi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.9"
django-filter = "^24.2"
django-split-settings = "^1.3.2"
pyyaml = "^6.0.1"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
colorlog = "^6.8.2"

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 150
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
