[tool.poetry]
name = "blackshakara"
version = "0.1.0"
description = "Ecommerce Application"
authors = ["Caleb Pedro <click2bundi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.9"
django-filter = "^24.2"
django-split-settings = "^1.3.2"
pyyaml = "^6.0.1"
python-decouple = "^3.8"
django-cors-headers = "^4.4.0"
celery = "^5.4.0"
django-celery-beat = "^2.6.0"
django-celery-results = "^2.5.1"
django-ipware = "^7.0.1"
django-redis = "^5.4.0"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
pillow = "^10.4.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.7"
requests = "^2.32.3"
whitenoise = "^6.7.0"
supervisor = "^4.2.5"
gunicorn = "^22.0.0"
cloudinary = "^1.41.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
colorlog = "^6.8.2"

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 150
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
